--- a/index.html
+++ b/index.html
@@ -1,252 +1,142 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="utf-8">
-  <title>Vehicle Booking</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<title>ระบบจองรถ</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont;
-      background: #f4f6f9;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 480px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 1.6rem;
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 16px;
-      padding: 20px;
-      margin-top: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,.08);
-    }
-
-    .profile {
-      text-align: center;
-      font-size: 1.2rem;
-      margin-bottom: 6px;
-    }
-
-    .role {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 16px;
-    }
-
-    button {
-      width: 100%;
-      padding: 16px;
-      font-size: 1.1rem;
-      border-radius: 12px;
-      border: none;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-
-    .btn-driver {
-      background: #005bea;
-      color: #fff;
-    }
-
-    .btn-cancel {
-      background: #ff5252;
-      color: #fff;
-    }
-
-    .btn-main {
-      background: #00b900;
-      color: #fff;
-    }
-
-    .btn-sub {
-      background: #e0e0e0;
-      color: #333;
-    }
-
-    .version {
-      text-align: center;
-      font-size: .8rem;
-      color: #999;
-      margin-top: 20px;
-    }
-
-    pre {
-      font-size: .75rem;
-      background: #eee;
-      padding: 10px;
-      margin-top: 10px;
-    }
-  </style>
+<style>
+body {
+  font-family: system-ui;
+  background: #f2f4f7;
+  margin: 0;
+}
+.container {
+  max-width: 480px;
+  margin: auto;
+  padding: 16px;
+}
+button {
+  width: 100%;
+  border: none;
+  border-radius: 14px;
+  font-size: 1.1rem;
+  padding: 16px;
+  margin-top: 12px;
+}
+.primary {
+  background: #00b900;
+  color: white;
+  font-size: 1.3rem;
+  padding: 22px;
+}
+.secondary {
+  background: white;
+  border: 1px solid #ccc;
+}
+.card {
+  background: white;
+  padding: 16px;
+  border-radius: 16px;
+  margin-top: 16px;
+}
+.hidden { display: none; }
+input {
+  width: 100%;
+  padding: 14px;
+  font-size: 1rem;
+  margin-top: 8px;
+}
+</style>
 </head>
 
 <body>
-
 <div class="container">
-  <h1>ระบบจองรถ</h1>
+
+  <!-- MAIN -->
+  <button class="primary">🚗 จองรถพร้อมคนขับ</button>
+
+  <button class="secondary">📜 ดูประวัติการจอง</button>
 
   <div class="card">
-    <div class="profile" id="profile">กำลังโหลด...</div>
-    <div class="role" id="role"></div>
-
-    <!-- toggle driver -->
-    <button id="toggleBtn" onclick="toggleDriver()"></button>
-
-    <!-- dynamic menu -->
-    <div id="menuArea"></div>
+    <div id="driverSection"></div>
   </div>
 
-  <pre id="log"></pre>
-  <div class="version" id="version"></div>
 </div>
 
 <script>
-/* ===== CONFIG ===== */
 const LIFF_ID = "2008934745-qU0fPztf";
-const GAS_ENDPOINT =
-  "https://script.google.com/macros/s/AKfycbxa7hQDWOeMyY6Pgbv4xxDD8UuWLZIM73MHAY6pGyuipljEA_AMpVnb8ppEmIX7Fv6Mgw/exec";
+const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz9i-KrKC7o4RFyn7bOV9wAP6oox-CWiMFtBZDfy7IsovT9u3sJ0fhknOYPc9pMM4Fhtw/exec";
 
-/* ===== STATE ===== */
-let currentRole = "user";
+let userId = "";
+let role = "";
+let mobile = "";
 
-/* ===== UTIL ===== */
-function log(msg) {
-  document.getElementById("log").textContent += msg + "\n";
-  console.log(msg);
-}
-
-/* ===== INIT ===== */
-async function initLiff() {
-  try {
-    await liff.init({ liffId: LIFF_ID });
-
-    if (!liff.isLoggedIn()) {
-      liff.login();
-      return;
-    }
-
-    const profile = await liff.getProfile();
-    document.getElementById("profile").innerText =
-      `สวัสดี ${profile.displayName}`;
-
-    await autoRegister(profile);
-
-  } catch (err) {
-    alert("Session หมดอายุ กำลัง login ใหม่");
-    liff.logout();
-    liff.login();
-  }
-}
-
-/* ===== AUTO REGISTER ===== */
-async function autoRegister(profile) {
-  const payload = {
-    action: "auto_register",
-    line_user_id: profile.userId,
-    display_name: profile.displayName
-  };
-
-  const res = await fetch(GAS_ENDPOINT, {
-    method: "POST",
-    headers: { "Content-Type": "text/plain" },
-    body: JSON.stringify(payload)
-  });
-
-  const data = await res.json();
-  currentRole = data.role;
-
-  render();
-}
-
-/* ===== TOGGLE DRIVER ===== */
-async function toggleDriver() {
-  const action =
-    currentRole === "driver"
-      ? "cancel_driver"
-      : "become_driver";
+async function init() {
+  await liff.init({ liffId: LIFF_ID });
+  if (!liff.isLoggedIn()) liff.login();
 
   const profile = await liff.getProfile();
-
-  const payload = {
-    action: action,
-    line_user_id: profile.userId
-  };
+  userId = profile.userId;
 
   const res = await fetch(GAS_ENDPOINT, {
     method: "POST",
-    headers: { "Content-Type": "text/plain" },
-    body: JSON.stringify(payload)
+    headers: {"Content-Type":"text/plain"},
+    body: JSON.stringify({
+      action: "auto_register",
+      line_user_id: userId,
+      display_name: profile.displayName
+    })
   });
 
   const data = await res.json();
-  currentRole = data.role;
+  role = data.role;
+  mobile = data.mobile;
 
-  alert("อัปเดตสถานะเรียบร้อย");
-  render();
+  renderDriverUI();
 }
 
-/* ===== RENDER UI ===== */
-function render() {
-  const roleEl = document.getElementById("role");
-  const btn = document.getElementById("toggleBtn");
-  const menu = document.getElementById("menuArea");
+function renderDriverUI() {
+  const el = document.getElementById("driverSection");
 
-  roleEl.innerText =
-    "สถานะ: " +
-    (currentRole === "driver"
-      ? "พนักงานขับรถ"
-      : "ผู้ใช้งานทั่วไป");
-
-  // toggle button
-  if (currentRole === "driver") {
-    btn.innerText = "❌ ยกเลิกการเป็นพนักงานขับรถ";
-    btn.className = "btn-cancel";
+  if (role !== "driver") {
+    el.innerHTML = `
+      <button onclick="registerDriver()">🧑‍✈️ ลงทะเบียนเป็นพนักงานขับรถ</button>
+    `;
   } else {
-    btn.innerText = "🚘 ลงทะเบียนเป็นพนักงานขับรถ";
-    btn.className = "btn-driver";
-  }
-
-  // menu buttons
-  menu.innerHTML = "";
-
-  if (currentRole === "user") {
-    menu.innerHTML += `
-      <button class="btn-main" onclick="alert('ขั้นต่อไปจะทำฟอร์มจองรถ')">
-        🚗 จองรถพร้อมคนขับ
-      </button>
-      <button class="btn-sub" onclick="alert('ขั้นต่อไปจะแสดงประวัติการจอง')">
-        📄 ดูประวัติ
-      </button>
-    `;
-  }
-
-  if (currentRole === "driver") {
-    menu.innerHTML += `
-      <button class="btn-main" onclick="alert('ขั้นต่อไปจะแสดงงานทั้งหมด')">
-        🧾 งานทั้งหมด
-      </button>
+    el.innerHTML = `
+      <div>📞 เบอร์โทร: ${mobile}</div>
+      <button onclick="registerDriver()">✏️ แก้ไขเบอร์โทร</button>
     `;
   }
 }
 
-/* ===== VERSION ===== */
-document.getElementById("version").innerText =
-  "Version: " + new Date().toLocaleString();
+async function registerDriver() {
+  const phone = prompt("กรุณากรอกเบอร์มือถือ (จำเป็น)");
+  if (!phone) {
+    alert("ต้องกรอกเบอร์มือถือ");
+    return;
+  }
 
-initLiff();
+  const res = await fetch(GAS_ENDPOINT, {
+    method: "POST",
+    headers: {"Content-Type":"text/plain"},
+    body: JSON.stringify({
+      action: "register_driver",
+      line_user_id: userId,
+      mobile_phone: phone
+    })
+  });
+
+  const data = await res.json();
+  if (data.success) {
+    alert("บันทึกข้อมูลเรียบร้อย");
+    location.reload();
+  }
+}
+
+init();
 </script>
-
 </body>
 </html>
