--- a/index.html
+++ b/index.html
@@ -1,139 +1,185 @@
 <!DOCTYPE html>
-<html lang="th">
+<html>
 <head>
 <meta charset="utf-8">
-<title>ระบบจองรถ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
 body {
-  font-family: system-ui;
-  background: #f2f4f7;
-  margin: 0;
-}
-.container {
-  max-width: 480px;
-  margin: auto;
+  font-family: system-ui, -apple-system, sans-serif;
   padding: 16px;
+  background:#fafafa;
 }
+
+h2 {
+  font-size: 26px;
+  margin-bottom: 6px;
+}
+
+#username {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+#role {
+  font-size: 18px;
+  margin-bottom: 16px;
+  color:#555;
+}
+
 button {
   width: 100%;
+  padding: 18px;
+  font-size: 20px;
+  border-radius: 12px;
   border: none;
-  border-radius: 14px;
-  font-size: 1.1rem;
-  padding: 16px;
-  margin-top: 12px;
+  cursor: pointer;
+  margin-bottom: 12px;
 }
+
 .primary {
-  background: #00b900;
-  color: white;
-  font-size: 1.3rem;
-  padding: 22px;
+  background:#0a7cff;
+  color:#fff;
 }
+
 .secondary {
-  background: white;
-  border: 1px solid #ccc;
+  background:#e0e0e0;
 }
-.card {
-  background: white;
-  padding: 16px;
-  border-radius: 16px;
-  margin-top: 16px;
+
+.danger {
+  background:#e53935;
+  color:#fff;
 }
-.hidden { display: none; }
+
 input {
-  width: 100%;
-  padding: 14px;
-  font-size: 1rem;
-  margin-top: 8px;
+  width:100%;
+  padding:16px;
+  font-size:18px;
+  margin-bottom:10px;
+  border-radius:10px;
+  border:1px solid #ccc;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-  <!-- MAIN -->
-  <button class="primary">🚗 จองรถพร้อมคนขับ</button>
+<h2>ระบบจองรถ หก-มน.</h2>
+<div id="username"></div>
+<div id="role"></div>
 
-  <button class="secondary">📜 ดูประวัติการจอง</button>
+<button id="mainBtn" class="primary"></button>
+<button id="subBtn" class="secondary"></button>
 
-  <div class="card">
-    <div id="driverSection"></div>
-  </div>
-
-</div>
+<div id="driverBox"></div>
 
 <script>
-const LIFF_ID = "2008934745-qU0fPztf";
-const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz9i-KrKC7o4RFyn7bOV9wAP6oox-CWiMFtBZDfy7IsovT9u3sJ0fhknOYPc9pMM4Fhtw/exec";
-
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbzsmXpbEmatOvCfQ82IbxW7AUg7odpiLGGAyLdBwMM4-mernk0dI-oKErNH392q-HVkrA/exec";
+let userRole = "user";
 let userId = "";
-let role = "";
 let mobile = "";
 
 async function init() {
-  await liff.init({ liffId: LIFF_ID });
+  await liff.init({ liffId: "2008934745-qU0fPztf" });
   if (!liff.isLoggedIn()) liff.login();
 
   const profile = await liff.getProfile();
   userId = profile.userId;
 
-  const res = await fetch(GAS_ENDPOINT, {
+  document.getElementById("username").innerText = profile.displayName;
+
+  const res = await fetch(ENDPOINT, {
     method: "POST",
-    headers: {"Content-Type":"text/plain"},
     body: JSON.stringify({
       action: "auto_register",
       line_user_id: userId,
       display_name: profile.displayName
     })
-  });
+  }).then(r=>r.json());
 
-  const data = await res.json();
-  role = data.role;
-  mobile = data.mobile;
+  userRole = res.role;
+  mobile = res.mobile || "";
 
-  renderDriverUI();
+  render();
 }
 
-function renderDriverUI() {
-  const el = document.getElementById("driverSection");
+function render() {
+  document.getElementById("role").innerText =
+    userRole === "driver"
+      ? "บทบาท: พนักงานขับรถ"
+      : "บทบาท: ผู้ใช้งานทั่วไป";
 
-  if (role !== "driver") {
-    el.innerHTML = `
-      <button onclick="registerDriver()">🧑‍✈️ ลงทะเบียนเป็นพนักงานขับรถ</button>
+  const mainBtn = document.getElementById("mainBtn");
+  const subBtn = document.getElementById("subBtn");
+  const box = document.getElementById("driverBox");
+
+  box.innerHTML = "";
+
+  if (userRole === "user") {
+    /* ===== USER ===== */
+    mainBtn.innerText = "จองรถพร้อมคนขับ";
+    mainBtn.onclick = () => alert("ไปหน้าแบบฟอร์มจองรถ");
+
+    subBtn.innerText = "ดูประวัติการจอง";
+    subBtn.onclick = () => alert("แสดงประวัติการจอง");
+
+    box.innerHTML = `
+      <button class="secondary" onclick="showDriverRegister()">
+        ลงทะเบียนเป็นพนักงานขับรถ
+      </button>
     `;
   } else {
-    el.innerHTML = `
-      <div>📞 เบอร์โทร: ${mobile}</div>
-      <button onclick="registerDriver()">✏️ แก้ไขเบอร์โทร</button>
+    /* ===== DRIVER ===== */
+    mainBtn.innerText = "งานทั้งหมด";
+    mainBtn.onclick = () => alert("แสดงงานที่กำลังจะเกิดทั้งหมด");
+
+    subBtn.innerText = "ดูประวัติงาน (เดือนนี้)";
+    subBtn.onclick = () => alert("แสดงประวัติงานย้อนหลังของเดือนนี้");
+
+    box.innerHTML = `
+      <div style="margin-bottom:8px">
+        เบอร์โทรติดต่อ: <strong>${mobile}</strong>
+      </div>
+      <button class="danger" onclick="cancelDriver()">
+        ยกเลิกสถานะพนักงานขับรถ
+      </button>
     `;
   }
 }
 
-async function registerDriver() {
-  const phone = prompt("กรุณากรอกเบอร์มือถือ (จำเป็น)");
-  if (!phone) {
-    alert("ต้องกรอกเบอร์มือถือ");
-    return;
-  }
+function showDriverRegister() {
+  const phone = prompt("กรุณากรอกเบอร์โทรสำหรับติดต่อ");
+  if (!phone) return;
 
-  const res = await fetch(GAS_ENDPOINT, {
-    method: "POST",
-    headers: {"Content-Type":"text/plain"},
+  registerDriver(phone);
+}
+
+async function registerDriver(phone) {
+  const res = await fetch(ENDPOINT, {
+    method:"POST",
     body: JSON.stringify({
-      action: "register_driver",
-      line_user_id: userId,
-      mobile_phone: phone
+      action:"register_driver",
+      line_user_id:userId,
+      mobile_phone:phone
     })
-  });
+  }).then(r=>r.json());
 
-  const data = await res.json();
-  if (data.success) {
-    alert("บันทึกข้อมูลเรียบร้อย");
-    location.reload();
-  }
+  if (res.success) location.reload();
+}
+
+async function cancelDriver() {
+  if (!confirm("ยืนยันยกเลิกสถานะพนักงานขับรถ?")) return;
+
+  const res = await fetch(ENDPOINT, {
+    method:"POST",
+    body: JSON.stringify({
+      action:"cancel_driver",
+      line_user_id:userId
+    })
+  }).then(r=>r.json());
+
+  if (res.success) location.reload();
 }
 
 init();
