--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ input, select {
 <div id="driverBox"></div>
 
 <div id="formBox">
-  <h3>ฟอร์มจองรถพร้อมคนขับ</h3>
+  <h3>กรอกข้อมูลการจองรถพร้อมคนขับ</h3>
 
-  <input type="date" id="booking_date">
-  <input type="time" id="booking_time">
+  <input type="date" id="booking_date" placeholder="วัน">
+  <input type="time" id="booking_time" placeholder="เวลา">
 
   <select id="vehicle_type">
     <option value="ไม่ระบุ">ไม่ระบุ</option>
