--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ input, select {
 
   <select id="vehicle_type">
     <option value="">-- เลือกรถ --</option>
+    <option value="ไม่ระบุ">ไม่ระบุ</option>
     <option value="รถเก๋ง">รถเก๋ง</option>
     <option value="รถกระบะ">รถกระบะ</option>
     <option value="รถตู้">รถตู้</option>
