--- a/index.html
+++ b/index.html
@@ -4,178 +4,130 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-
 <style>
-body { font-family: system-ui; padding:16px; background:#fafafa; }
-h2 { font-size:26px; margin-bottom:6px; }
-#username { font-size:20px; }
-#role { font-size:18px; color:#555; margin-bottom:16px; }
-
-button {
-  width:100%; padding:18px; font-size:20px;
-  border-radius:12px; border:none; margin-bottom:12px;
-}
-.primary { background:#0a7cff; color:#fff; }
-.secondary { background:#e0e0e0; }
-.danger { background:#e53935; color:#fff; }
-
-input, select {
-  width:100%; padding:14px; font-size:18px;
-  margin-bottom:10px; border-radius:10px; border:1px solid #ccc;
-}
-
-#formBox { display:none; }
+body { font-family: system-ui; padding:16px; }
+button { width:100%; padding:14px; margin:6px 0; }
+.primary { background:#0a7cff;color:#fff }
+.secondary { background:#ddd }
+.danger { background:#e53935;color:#fff }
+#formBox,#historyBox,#driverForm { display:none }
 </style>
 </head>
 
 <body>
-
-<h2>ระบบจองรถ หก-มน.</h2>
+<h2>ระบบจองรถ</h2>
 <div id="username"></div>
 <div id="role"></div>
 
 <button id="mainBtn" class="primary"></button>
 <button id="subBtn" class="secondary"></button>
 
-<div id="driverBox"></div>
-
 <div id="formBox">
-  <h3>ฟอร์มจองรถพร้อมคนขับ</h3>
+  <h3>จองรถ</h3>
+  <input id="booking_date" type="date">
+  <input id="booking_time" type="time">
+  <input id="pickup_location" placeholder="จุดรับ">
+  <input id="dropoff_location" placeholder="จุดส่ง">
+  <input id="contact_mobile" placeholder="เบอร์ติดต่อ">
+  <button onclick="submitBooking()">ยืนยัน</button>
+</div>
 
-  <input type="date" id="booking_date">
-  <input type="time" id="booking_time">
+<div id="historyBox"></div>
 
-  <select id="vehicle_type">
-    <option value="">-- เลือกรถ --</option>
-    <option value="ไม่ระบุ">ไม่ระบุ</option>
-    <option value="รถเก๋ง">รถเก๋ง</option>
-    <option value="รถกระบะ">รถกระบะ</option>
-    <option value="รถตู้">รถตู้</option>
-  </select>
-
-  <input type="number" id="passenger_count" placeholder="จำนวนผู้โดยสาร">
-  <input type="text" id="pickup_location" placeholder="จุดรับ">
-  <input type="text" id="dropoff_location" placeholder="จุดส่ง">
-  <input type="text" id="contact_mobile" placeholder="เบอร์ติดต่อ">
-
-  <button class="primary" onclick="submitBooking()">ยืนยันการจอง</button>
-  <button class="secondary" onclick="closeForm()">ยกเลิก</button>
+<div id="driverForm">
+  <h3>กรอกงานเอง</h3>
+  <input id="d_date" type="date">
+  <input id="d_time" type="time">
+  <input id="d_pickup" placeholder="จุดรับ">
+  <input id="d_dropoff" placeholder="จุดส่ง">
+  <button onclick="driverCreate()">บันทึกงาน</button>
 </div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby1xk06G3EKUSwXakayHug4PnEUKfiDq4HWJF_TOsUPzWY5wFBs2nkaNk0fuwRTJ5ZW/exec";
-let userId = "";
-let role = "user";
-let mobile = "";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycby09--9I8PQEveObm8KISm4S4h5QNlghecG5NAv3InAliKb9ax9ibsI6hP8T7BZ8NPJqA/exec";
+let userId="", role="", name="";
 
-async function init() {
+async function init(){
   await liff.init({ liffId:"2008934745-qU0fPztf" });
-  if (!liff.isLoggedIn()) liff.login();
-
+  if(!liff.isLoggedIn()) liff.login();
   const p = await liff.getProfile();
-  userId = p.userId;
-  document.getElementById("username").innerText = p.displayName;
+  userId=p.userId; name=p.displayName;
+  username.innerText=name;
 
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"auto_register",
-      line_user_id:userId,
-      display_name:p.displayName
-    })
-  }).then(r=>r.json());
+  const r=await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"auto_register",line_user_id:userId,display_name:name
+  })}).then(r=>r.json());
 
-  role = res.role;
-  mobile = res.mobile || "";
-
+  role=r.role;
+  roleEl.innerText="บทบาท: "+role;
   render();
 }
 
-function render() {
-  document.getElementById("role").innerText =
-    role === "driver" ? "บทบาท: พนักงานขับรถ" : "บทบาท: ผู้ใช้งานทั่วไป";
-
-  const driverBox = document.getElementById("driverBox");
-  driverBox.innerHTML = "";
-
-  if (role === "user") {
-    mainBtn.innerText = "จองรถพร้อมคนขับ";
-    mainBtn.onclick = showForm;
-
-    subBtn.innerText = "ดูประวัติการจอง";
-    subBtn.onclick = () => alert("TODO");
-
-    driverBox.innerHTML = `
-      <button class="secondary" onclick="showDriverRegister()">
-        ลงทะเบียนเป็นพนักงานขับรถ
-      </button>
-    `;
-  } else {
-    mainBtn.innerText = "งานทั้งหมด";
-    subBtn.innerText = "ดูประวัติงาน";
+function render(){
+  if(role==="user"){
+    mainBtn.innerText="จองรถ";
+    mainBtn.onclick=()=>formBox.style.display="block";
+    subBtn.innerText="ประวัติการจอง";
+    subBtn.onclick=loadHistory;
+  }else{
+    mainBtn.innerText="กรอกงานเอง";
+    mainBtn.onclick=()=>driverForm.style.display="block";
+    subBtn.style.display="none";
   }
 }
 
-function showForm() {
-  document.getElementById("formBox").style.display="block";
-  document.getElementById("contact_mobile").value = mobile;
+async function submitBooking(){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"create_booking",
+    line_user_id:userId,
+    booking_date:booking_date.value,
+    booking_time:booking_time.value,
+    pickup_location:pickup_location.value,
+    dropoff_location:dropoff_location.value,
+    contact_mobile:contact_mobile.value
+  })});
+  alert("บันทึกแล้ว");
+  location.reload();
 }
 
-function closeForm() {
-  document.getElementById("formBox").style.display="none";
+async function loadHistory(){
+  const data=await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"list_my_bookings",line_user_id:userId
+  })}).then(r=>r.json());
+
+  historyBox.innerHTML="<h3>ประวัติ</h3>";
+  data.forEach(b=>{
+    historyBox.innerHTML+=`
+      <div>
+        ${b.date} ${b.time} (${b.status})
+        <button class="danger" onclick="cancel('${b.booking_id}')">ยกเลิก</button>
+      </div>`;
+  });
+  historyBox.style.display="block";
 }
 
-/* ================= VALIDATION ================= */
-function isEmpty(v) {
-  return !v || v.toString().trim() === "";
+async function cancel(id){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"cancel_booking",
+    booking_id:id,
+    line_user_id:userId
+  })});
+  alert("ยกเลิกแล้ว");
+  location.reload();
 }
 
-async function submitBooking() {
-  // ---- VALIDATE ----
-  if (isEmpty(booking_date.value)) {
-    return alert("กรุณาเลือกวันที่จอง");
-  }
-  if (isEmpty(booking_time.value)) {
-    return alert("กรุณาเลือกเวลา");
-  }
-  if (isEmpty(vehicle_type.value)) {
-    return alert("กรุณาเลือกประเภทรถ");
-  }
-  if (isEmpty(passenger_count.value) || passenger_count.value <= 0) {
-    return alert("กรุณาระบุจำนวนผู้โดยสาร");
-  }
-  if (isEmpty(pickup_location.value)) {
-    return alert("กรุณาระบุจุดรับ");
-  }
-  if (isEmpty(dropoff_location.value)) {
-    return alert("กรุณาระบุจุดส่ง");
-  }
-  if (isEmpty(contact_mobile.value)) {
-    return alert("กรุณาระบุเบอร์ติดต่อ");
-  }
-
-  // ---- SEND ----
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"create_booking",
-      line_user_id:userId,
-      booking_date:booking_date.value,
-      booking_time:booking_time.value,
-      vehicle_type:vehicle_type.value,
-      passenger_count:passenger_count.value,
-      pickup_location:pickup_location.value.trim(),
-      dropoff_location:dropoff_location.value.trim(),
-      contact_mobile:contact_mobile.value.trim()
-    })
-  }).then(r=>r.json());
-
-  if (res.success) {
-    alert("จองรถเรียบร้อย");
-    location.reload();
-  } else {
-    alert("เกิดข้อผิดพลาด");
-  }
+async function driverCreate(){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"driver_create_booking",
+    driver_id:userId,
+    driver_name:name,
+    booking_date:d_date.value,
+    booking_time:d_time.value,
+    pickup_location:d_pickup.value,
+    dropoff_location:d_dropoff.value
+  })});
+  alert("บันทึกงานแล้ว");
+  location.reload();
 }
 
 init();
