--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
 <style>
-body { font-family:sans-serif; padding:16px; }
-button { width:100%; padding:14px; margin:6px 0; }
+body { font-family: system-ui; padding:16px; background:#fafafa; }
+button { width:100%; padding:16px; font-size:18px; margin-bottom:10px; border-radius:10px; }
+.primary{background:#0a7cff;color:#fff;}
+.secondary{background:#e0e0e0;}
+.danger{background:#e53935;color:#fff;}
+input,select{width:100%;padding:12px;margin-bottom:8px;}
+#formBox,#historyBox{display:none;}
 </style>
 </head>
 
@@ -15,76 +22,97 @@ button { width:100%; padding:14px; margin:6px 0; }
 <div id="username"></div>
 <div id="role"></div>
 
-<button id="mainBtn"></button>
-<button id="subBtn"></button>
+<button id="mainBtn" class="primary"></button>
+<button id="subBtn" class="secondary"></button>
+<div id="driverBox"></div>
 
-<div id="content"></div>
+<div id="formBox">
+  <input type="date" id="booking_date">
+  <input type="time" id="booking_time">
+  <input type="text" id="pickup_location" placeholder="จุดรับ">
+  <input type="text" id="dropoff_location" placeholder="จุดส่ง">
+  <input type="text" id="contact_mobile" placeholder="เบอร์ติดต่อ">
+  <button class="primary" onclick="submitBooking()">บันทึก</button>
+</div>
+
+<div id="historyBox"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbwJoLc8Tk_UUF5sLpKEL4Kmbh_yU9oe2jNd1m0BX1Znc9gthx1H-ZbebyfVdshlhUlHTg/exec";
-let userId="", role="", displayName="";
+const ENDPOINT="https://script.google.com/macros/s/AKfycbxMURRIJKcBR7oK5eBTqn7xpUlKQsmNivHu6quI1ltbx-C3Kt8YD9E5WfDs9Vy1LGGC_A/exec";
+let userId="",role="",displayName="";
 
-async function init() {
+async function init(){
   await liff.init({ liffId:"2008934745-qU0fPztf" });
-  if (!liff.isLoggedIn()) liff.login();
+  if(!liff.isLoggedIn()) liff.login();
+  const p=await liff.getProfile();
+  userId=p.userId; displayName=p.displayName;
+  document.getElementById("username").innerText=displayName;
 
-  const p = await liff.getProfile();
-  userId = p.userId;
-  displayName = p.displayName;
-  document.getElementById("username").innerText = displayName;
-
-  const r = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({ action:"auto_register", line_user_id:userId, display_name:displayName })
-  }).then(r=>r.json());
-
-  role = r.role;
-  document.getElementById("role").innerText = role;
+  const res=await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"auto_register",line_user_id:userId,display_name:displayName
+  })}).then(r=>r.json());
+  role=res.role;
   render();
 }
 
-function render() {
-  if (role === "user") {
-    mainBtn.innerText = "จองรถ";
-    subBtn.innerText = "ประวัติการจอง";
-    subBtn.onclick = loadHistory;
-  } else {
-    mainBtn.innerText = "กรอกงานเอง";
-    mainBtn.onclick = driverCreate;
-    subBtn.style.display="none";
+function render(){
+  document.getElementById("role").innerText=role;
+  if(role==="user"){
+    mainBtn.innerText="จองรถ";
+    mainBtn.onclick=()=>formBox.style.display="block";
+    subBtn.innerText="ประวัติการจอง";
+    subBtn.onclick=loadHistory;
+  }else{
+    mainBtn.innerText="กรอกงานเอง";
+    mainBtn.onclick=submitDriverJob;
   }
 }
 
-async function loadHistory() {
-  const r = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({ action:"get_my_bookings", line_user_id:userId })
-  }).then(r=>r.json());
-
-  let html = "";
-  r.bookings.forEach(b=>{
-    html += `
-      <div>
-        ${b.date} ${b.time}<br>
-        ${b.from} → ${b.to}<br>
-        สถานะ: ${b.status}
-        ${b.status==="pending" ? `<button onclick="cancel('${b.booking_id}')">ยกเลิก</button>`:""}
-      </div><hr>`;
-  });
-  content.innerHTML = html;
+async function submitBooking(){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"create_booking",
+    line_user_id:userId,
+    booking_date:booking_date.value,
+    booking_time:booking_time.value,
+    pickup_location:pickup_location.value,
+    dropoff_location:dropoff_location.value,
+    contact_mobile:contact_mobile.value
+  })});
+  alert("บันทึกแล้ว");
+  location.reload();
 }
 
-async function cancel(id) {
-  if (!confirm("ยืนยันยกเลิก?")) return;
-  await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({ action:"cancel_booking", booking_id:id, line_user_id:userId })
-  });
+async function submitDriverJob(){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"driver_create_booking",
+    driver_name:displayName,
+    booking_date:booking_date.value,
+    booking_time:booking_time.value,
+    pickup_location:pickup_location.value,
+    dropoff_location:dropoff_location.value,
+    contact_mobile:contact_mobile.value
+  })});
+  alert("บันทึกงานแล้ว");
+  location.reload();
+}
+
+async function loadHistory(){
+  const list=await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"list_user_bookings",line_user_id:userId
+  })}).then(r=>r.json());
+  historyBox.innerHTML=list.map(b=>
+    `<div>${b.date} ${b.time} ${b.dropoff} (${b.status})
+    ${b.status==="pending"?`<button onclick="cancel('${b.booking_id}')">ยกเลิก</button>`:""}
+    </div>`
+  ).join("");
+  historyBox.style.display="block";
+}
+
+async function cancel(id){
+  await fetch(ENDPOINT,{method:"POST",body:JSON.stringify({
+    action:"cancel_booking",booking_id:id,line_user_id:userId
+  })});
   loadHistory();
-}
-
-function driverCreate() {
-  alert("TODO: ใช้ form เดิม แต่เปลี่ยน action เป็น driver_create_booking");
 }
 
 init();
